Add a BrowserViewRenderer unittest for compositor switch logic

BUG=616955

Review-Url: https://codereview.chromium.org/2078383004
Cr-Commit-Position: refs/heads/master@{#401154}

Former-commit-id: 48891cc12ea4cdeb20c1ce8e8555e1ff6267007b